# HW_2_poetry

./: info.py  logs.txt  pyproject.toml
