[tool.poetry]
name = "hw-2-poetry"
version = "0.1.0"
description = ""
authors = ["MONSMIN <99141331+MONSMIN@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_2_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
